Delete and edit implementation, callbacks onTask click

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskTimer">
         <activity
-            android:name=".AddEditActivity"
+            android:name=".TaskEditorActivity"
             android:label="@string/title_activity_add_edit"
-            android:theme="@style/Theme.TaskTimer.NoActionBar">
-
+            android:theme="@style/Theme.TaskTimer.NoActionBar"
+            android:parentActivityName=".MainActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.example.tasktimer.MainActivity"/>
         </activity>
         <activity
             android:name=".MainActivity"
