--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.tasktimer">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskTimer">
         <activity
-            android:name=".TaskEditorActivity"
-            android:label="@string/title_activity_add_edit"
-            android:theme="@style/Theme.TaskTimer.NoActionBar"
-            android:parentActivityName=".MainActivity">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.example.tasktimer.MainActivity"/>
-        </activity>
-        <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.TaskTimer.NoActionBar">
             <intent-filter>
@@ -30,7 +22,7 @@
         </activity>
 
         <provider
-            android:name=".Provider"
+            android:name=".database.Provider"
             android:authorities="com.example.tasktimer.provider"
             android:exported="false" />
     </application>
